--- a/doc/agile/v1/sprint_backlog_08.org
+++ b/doc/agile/v1/sprint_backlog_08.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-03-21 Wed 10:13]
+#+CAPTION: Clock summary at [2018-05-14 Mon 22:22]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *28:07* |       |       |   0.0 |
+| *Total time*                                                                | *29:55* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 28:07   |       |       |   0.0 |
-| Active                                                                      |         | 28:07 |       |   0.0 |
+| Stories                                                                     | 29:55   |       |       |   0.0 |
+| Active                                                                      |         | 29:55 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  4:55 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  0:11 |   0.0 |
 | Write a blog post on previous sprint                                        |         |       |  3:35 |   0.0 |
@@ -29,7 +29,8 @@
 | Rename stereotypes                                                          |         |       |  0:35 |   0.0 |
 | Dogen does not generate ODB targets for primitives                          |         |       |  0:36 |   0.0 |
 | Create a presentation on variability                                        |         |       | 15:16 |   0.0 |
-| Create the =generation= model                                               |         |       |  2:49 |   0.0 |
+| Create the =generation= model                                               |         |       |  3:57 |   0.0 |
+| Move to latest clang and gcc on travis                                      |         |       |  0:40 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -130,15 +131,18 @@ enabled.
 We need to do a presentation on how variability is linked to MDE.
 
 *** STARTED Create the =generation= model                             :story:
-    CLOCK: [2018-01-05 Fri 15:48]--[2018-01-05 Fri 16:01] =>  0:13
-    CLOCK: [2018-01-05 Fri 15:44]--[2018-01-05 Fri 15:47] =>  0:03
-    CLOCK: [2018-01-05 Fri 15:04]--[2018-01-05 Fri 15:43] =>  0:39
-    CLOCK: [2018-01-05 Fri 13:53]--[2018-01-05 Fri 13:57] =>  0:04
-    CLOCK: [2018-01-05 Fri 13:28]--[2018-01-05 Fri 13:52] =>  0:24
-    CLOCK: [2018-01-05 Fri 11:31]--[2018-01-05 Fri 11:41] =>  0:10
-    CLOCK: [2018-01-05 Fri 10:41]--[2018-01-05 Fri 11:01] =>  0:46
-    CLOCK: [2018-01-04 Thu 13:48]--[2018-01-04 Thu 14:30] =>  0:42
+    :LOGBOOK:
+    CLOCK: [2018-05-14 Mon 20:32]--[2018-05-14 Mon 21:40] =>  1:48
     CLOCK: [2018-01-04 Thu 13:33]--[2018-01-04 Thu 13:47] =>  0:14
+    CLOCK: [2018-01-04 Thu 13:48]--[2018-01-04 Thu 14:30] =>  0:42
+    CLOCK: [2018-01-05 Fri 10:41]--[2018-01-05 Fri 11:01] =>  0:46
+    CLOCK: [2018-01-05 Fri 11:31]--[2018-01-05 Fri 11:41] =>  0:10
+    CLOCK: [2018-01-05 Fri 13:28]--[2018-01-05 Fri 13:52] =>  0:24
+    CLOCK: [2018-01-05 Fri 13:53]--[2018-01-05 Fri 13:57] =>  0:04
+    CLOCK: [2018-01-05 Fri 15:04]--[2018-01-05 Fri 15:43] =>  0:39
+    CLOCK: [2018-01-05 Fri 15:44]--[2018-01-05 Fri 15:47] =>  0:03
+    CLOCK: [2018-01-05 Fri 15:48]--[2018-01-05 Fri 16:01] =>  0:13
+    :END:
 
 Create a new model called =generation= and move all code-generation
 related class to it.
@@ -181,6 +185,15 @@ Problems:
   class =opaque_properties= and then have a container of these in
   element. However, to make it properly extensible, the only way is to
   make it a unordered set of pointers.
+
+*** STARTED Move to latest clang and gcc on travis                    :story:
+    :LOGBOOK:
+    CLOCK: [2018-05-14 Mon 21:41]--[2018-05-14 Mon 22:21] =>  0:40
+    :END:
+
+It seems our builds started to time out around the transition to gcc
+6.4. Try and upgrade compilers to see if we resume the previous build
+times. Drop support for all older compilers.
 
 *** Propagate =fluent= stereotype                                     :story:
 
@@ -383,7 +396,13 @@ there are two different kinds of exomodels: proxyness is a fundamental
 property of an exomodel. If we do this we can then do the mapping in
 flight as we transform from exomodel to endomodel.
 
-*** Remove exomodel and all deprecated classes                        :story:
+*** Remove exomodel remnants                                          :story:
+
+It seems we have removed the exomodel on the main, but a grep for it
+still shows quite a few remnants. Go through the grep and remove all
+of it.
+
+*Previous Understanding*
 
 Once the =external= model has been created, we need to replace the
 legacy exomodel related transforms; and once that is done, we need to
