agile: backlog create a =ci= folder in build

--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -11,6 +11,17 @@ This document contains the [[http://www.mountaingoatsoftware.com/agile/scrum/pro
 
 Stories that we intend to look at in the very near future.
 
+*** Create a =ci= folder in build                                     :story:
+
+We should use the same approach as nupic for organising the scripts: a
+top-level =ci= folder with folders per CI system. We should also
+follow their naming convention for the build scripts which seem to
+follow the CI events.
+
+Links:
+
+- https://github.com/numenta/nupic.core/tree/master/ci
+
 *** Consider using Boost.PolyCollection in model                      :story:
 
 We have a collection of elements at present in model. It appears there
