--- a/doc/agile/v1/sprint_backlog_08.org
+++ b/doc/agile/v1/sprint_backlog_08.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-05-14 Mon 22:22]
+#+CAPTION: Clock summary at [2018-05-15 Tue 21:33]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *29:55* |       |       |   0.0 |
+| *Total time*                                                                | *31:24* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 29:55   |       |       |   0.0 |
-| Active                                                                      |         | 29:55 |       |   0.0 |
+| Stories                                                                     | 31:24   |       |       |   0.0 |
+| Active                                                                      |         | 31:24 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  4:55 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  0:11 |   0.0 |
 | Write a blog post on previous sprint                                        |         |       |  3:35 |   0.0 |
@@ -29,8 +29,9 @@
 | Rename stereotypes                                                          |         |       |  0:35 |   0.0 |
 | Dogen does not generate ODB targets for primitives                          |         |       |  0:36 |   0.0 |
 | Create a presentation on variability                                        |         |       | 15:16 |   0.0 |
-| Create the =generation= model                                               |         |       |  3:57 |   0.0 |
 | Move to latest clang and gcc on travis                                      |         |       |  0:40 |   0.0 |
+| Create the =generation= model                                               |         |       |  3:57 |   0.0 |
+| Recap of the current situation                                              |         |       |  1:29 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -130,6 +131,16 @@ enabled.
 
 We need to do a presentation on how variability is linked to MDE.
 
+*** COMPLETED Move to latest clang and gcc on travis                  :story:
+    CLOSED: [2018-05-15 Tue 20:34]
+    :LOGBOOK:
+    CLOCK: [2018-05-14 Mon 21:41]--[2018-05-14 Mon 22:21] =>  0:40
+    :END:
+
+It seems our builds started to time out around the transition to gcc
+6.4. Try and upgrade compilers to see if we resume the previous build
+times. Drop support for all older compilers.
+
 *** STARTED Create the =generation= model                             :story:
     :LOGBOOK:
     CLOCK: [2018-05-14 Mon 20:32]--[2018-05-14 Mon 21:40] =>  1:48
@@ -186,14 +197,54 @@ Problems:
   element. However, to make it properly extensible, the only way is to
   make it a unordered set of pointers.
 
-*** STARTED Move to latest clang and gcc on travis                    :story:
+*** STARTED Recap of the current situation                            :story:
     :LOGBOOK:
-    CLOCK: [2018-05-14 Mon 21:41]--[2018-05-14 Mon 22:21] =>  0:40
+    CLOCK: [2018-05-15 Tue 20:03]--[2018-05-15 Tue 21:32] =>  1:29
     :END:
 
-It seems our builds started to time out around the transition to gcc
-6.4. Try and upgrade compilers to see if we resume the previous build
-times. Drop support for all older compilers.
+We have started a number of simultaneous refactors and now its very
+hard to understand where we are and where we are going. We need to go
+though the code and ascertain the state of the onion.
+
+Notes:
+
+- the external model refactoring seems to be complete.
+- the modeling model refactoring seems to have been tangled with the
+  formatters refactor. We have moved some but not all properties into
+  the modeling model but then we realised that some of them should
+  really be in the generation model. However, we then hit the usual
+  problem: how do we decorate element with the generation properties?
+  See the discussion in story "Create the =generation= model" for
+  details on why this is non-trivial. At that point we were left with
+  a series of not particularly ideal options:
+  - go forward and create a pair of element and generatable properties
+    and somehow fix all transforms. In a way this is what we had done
+    with the formatters, except that was after all of the transforms
+    had been applied.
+  - create the idea of "opaque properties" in the modeling model and
+    then unpack the opaque properties in the generation transforms.
+  - add the properties directly to the modeling model (to the element,
+    at least) but only populate them in the generation transforms.
+- the problem we are trying to solve seems to fall somewhere in
+  between the decorator pattern and the mixin pattern but its not
+  quite either.
+- this problem started because we wanted to make a clear separation
+  between modeling space and generation space; modeling space is not
+  aware of the archetype expansion. This makes sense to an extent: we
+  do not want to create dependencies between modeling space and
+  formatters (source of the cycles between components). However, we
+  also do not want to have to define all of the meta-model elements
+  again in order to attach the generatable properties.
+
+
+
+*** Rename core models                                                :story:
+
+The more we catch up with the literature, the more the current model
+names look weird, particularly =modeling= and =generation=. In reality
+all of the models relate to "modeling" and to generation. We should
+just bite the bullet and use the compiler related names: frontend,
+middleend and backend.
 
 *** Propagate =fluent= stereotype                                     :story:
 
@@ -974,22 +1025,6 @@ dependencies builder requires. However, we can create an interface for
 the dependencies builder in yarn and implement it in each kernel. Each
 kernel must also supply a factory for the builders.
 
-*** Consider folding quilt into yarn                                  :story:
-
-In the far distant future, when we finally finish merging all the
-quilt specific stuff into yarn (e.g. formattables), it actually makes
-sense to deprecate quilt as a concept. Yarn then becomes the central
-point, and frontends and backends are just implementations that hook
-into it. Thus we then have simply =yarn.cpp= and =yarn.csharp=.
-
-However, there is still a concept that needs to be captured: the
-kernel. That is, a set of backends that work together to provide some
-kind of "service". In quilt's case the basic type definitions. We
-could potentially want to implement other backends that are totally
-distinct from quilt. However, we still do not have a concrete use case
-for this. Thus it may make more sense to just fold now and worry about
-these more flexible use cases when they arrive. We can always rename.
-
 *** Code-generate annotations type templates                          :story:
 
 Tasks:
@@ -1482,3 +1517,19 @@ can also remove this function.
 At present we are still doing C++-03 iterations in the STL IO files
 such as =vector_io=, =list_io=, etc. We should be using the new =for=
 syntax for C++-11.
+*** CANCELLED Consider folding quilt into yarn                        :story:
+    CLOSED: [2018-05-15 Tue 20:40]
+
+In the far distant future, when we finally finish merging all the
+quilt specific stuff into yarn (e.g. formattables), it actually makes
+sense to deprecate quilt as a concept. Yarn then becomes the central
+point, and frontends and backends are just implementations that hook
+into it. Thus we then have simply =yarn.cpp= and =yarn.csharp=.
+
+However, there is still a concept that needs to be captured: the
+kernel. That is, a set of backends that work together to provide some
+kind of "service". In quilt's case the basic type definitions. We
+could potentially want to implement other backends that are totally
+distinct from quilt. However, we still do not have a concrete use case
+for this. Thus it may make more sense to just fold now and worry about
+these more flexible use cases when they arrive. We can always rename.
