--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -11,6 +11,14 @@ This document contains the [[http://www.mountaingoatsoftware.com/agile/scrum/pro
 
 Stories that we intend to look at in the very near future.
 
+*** Add support for entity framework                                  :story:
+
+It seems there is a C# entity framework which is some kind of ORM.
+
+Links:
+
+- [[https://docs.microsoft.com/en-us/ef/core/][Entity Framework Core Quick Overview]]
+
 *** Add dogen specific binary serialisation                           :story:
 
 Given we know the internals of the model types to serialise, there is
