--- a/doc/agile/v1/sprint_backlog_08.org
+++ b/doc/agile/v1/sprint_backlog_08.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-05-15 Tue 21:33]
+#+CAPTION: Clock summary at [2018-06-18 Mon 11:01]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *31:24* |       |       |   0.0 |
+| *Total time*                                                                | *32:13* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 31:24   |       |       |   0.0 |
-| Active                                                                      |         | 31:24 |       |   0.0 |
+| Stories                                                                     | 32:13   |       |       |   0.0 |
+| Active                                                                      |         | 32:13 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  4:55 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       |  0:11 |   0.0 |
 | Write a blog post on previous sprint                                        |         |       |  3:35 |   0.0 |
@@ -32,6 +32,7 @@
 | Move to latest clang and gcc on travis                                      |         |       |  0:40 |   0.0 |
 | Create the =generation= model                                               |         |       |  3:57 |   0.0 |
 | Recap of the current situation                                              |         |       |  1:29 |   0.0 |
+| Reduce build times to avoid timeouts                                        |         |       |  0:49 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -235,6 +236,43 @@ Notes:
   formatters (source of the cycles between components). However, we
   also do not want to have to define all of the meta-model elements
   again in order to attach the generatable properties.
+
+*** STARTED Reduce build times to avoid timeouts                      :story:
+    :LOGBOOK:
+    CLOCK: [2018-06-18 Mon 10:12]--[2018-06-18 Mon 11:01] =>  0:49
+    :END:
+
+Refactoring at the moment is painful because every time we change
+CMakeFiles we end up rebuilding everything. At 2K plus ninja targets,
+it is a long wait. In addition, we have been getting really close to
+the maximum travis time, resulting in lots of manual fiddling to get
+things to work. However, there is one very easy win: split test models
+from production code. This is more than just a quick hack, really:
+
+- we are compiling the test models with every build at present, but
+  since they are not production code, we only really need to validate
+  them whenever they change. That is - for a given OS, compiler, etc -
+  once a test model compiles, links and its tests run, nothing else
+  needs to be said until the test model changes.
+- test models change very infrequently; only when we do a breaking
+  change on Dogen and we rebase.
+- test models by definition do not reference production code (or at
+  least, /should/ not).
+
+As a first step we should try to isolate the two builds (production,
+test models) via variables so that we can create separate
+travis/appveyor builds for them. In the future we should make the
+separation even more explicit, by moving the folder away from the
+production code.
+
+*Previous Understanding*
+
+At present we get random build time violations on travis due to builds
+taking longer than 50 mins. We need to think of ways to reduce the
+build time. Things to try:
+
+- remove all of the hashing etc for the types we don't need to hash.
+- get rid of the warnings for boost.
 
 *** Rename core models                                                :story:
 
@@ -464,39 +502,13 @@ Once the =external= model has been created, we need to replace the
 legacy exomodel related transforms; and once that is done, we need to
 remove all of the legacy code.
 
-*** Reduce build times to avoid timeouts                              :story:
+*** Create a build script just for C#                                 :story:
 
-Refactoring at the moment is painful because every time we change
-CMakeFiles we end up rebuilding everything. At 2K plus ninja targets,
-it is a long wait. In addition, we have been getting really close to
-the maximum travis time, resulting in lots of manual fiddling to get
-things to work. However, there is one very easy win: split test models
-from production code. This is more than just a quick hack, really:
-
-- we are compiling the test models with every build at present, but
-  since they are not production code, we only really need to validate
-  them whenever they change. That is - for a given OS, compiler, etc -
-  once a test model compiles, links and its tests run, nothing else
-  needs to be said until the test model changes.
-- test models change very infrequently; only when we do a breaking
-  change on Dogen and we rebase.
-- test models by definition do not reference production code (or at
-  least, /should/ not).
-
-As a first step we should try to isolate the two builds (production,
-test models) via variables so that we can create separate
-travis/appveyor builds for them. In the future we should make the
-separation even more explicit, by moving the folder away from the
-production code.
-
-*Previous Understanding*
-
-At present we get random build time violations on travis due to builds
-taking longer than 50 mins. We need to think of ways to reduce the
-build time. Things to try:
-
-- remove all of the hashing etc for the types we don't need to hash.
-- get rid of the warnings for boost.
+At the moment we are doing C++ and C# on the same build script, making
+it really complex. It would be much easier to have a separate C# build
+script. We should also have a separate install script for C# so we
+don't have to waste time installing packages if we're not going to use
+them.
 
 *** Create the =orchestration= model                                  :story:
 
